# system-monitor

./: Cargo.toml  README.md
src/: auth.rs  collector.rs  main.rs  network.rs  static_files.rs  tui.rs  ui.rs
src/static/: index.html
src/static/css/: base.css  cards.css  resource-panel.css  responsive.css  style.css
src/static/js/: app.js
