[package]
name = "system-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["auth", "fs", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 系统信息采集
sysinfo = "0.30"

# 基础64编码（用于 Basic Auth）
base64 = "0.22"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 内嵌静态文件
rust-embed = "8"
mime_guess = "2.0"
