[package]
name = "system-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 系统信息采集
sysinfo = "0.30"

# GPU 监控 (NVIDIA 优先，支持多平台)
nvml-wrapper = "0.10"
# 备用：如果是 AMD/Intel，可以用下面的，但这里先用 NVIDIA 方案
# amdgpu-sysfs = "0.2" 

# 电池监控 (跨平台)
battery = "0.7"

# JWT 认证
jsonwebtoken = "9"
bcrypt = "0.15"  # 密码哈希，比明文存储安全

# 静态文件嵌入
rust-embed = "8"
mime_guess = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理（JWT 过期）
chrono = { version = "0.4", features = ["serde"] }

# 异步 trait
async-trait = "0.1"

local-ip-address = "0.6"  # 获取本地 IP
